# clone-voice

./: .gitignore  README.md  pyproject.toml  requirements.txt
src/clone_voice/: __init__.py  cli.py  config.py  preprocessor.py  recorder.py  synthesizer.py
