[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "clone-voice"
version = "0.1.0"
description = "Local voice cloning solution using XTTS v2 for zero-shot text-to-speech"
readme = "README.md"
license = "MIT"
requires-python = ">=3.10,<3.12"
authors = [{ name = "keath" }]
keywords = ["voice-cloning", "tts", "text-to-speech", "xtts", "ai"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Topic :: Multimedia :: Sound/Audio :: Speech",
]
dependencies = [
    "TTS>=0.22.0",
    "torch>=2.0.0",
    "torchaudio>=2.0.0",
    "typer[all]>=0.9.0",
    "rich>=13.0.0",
    "pydantic>=2.0.0",
    "pydantic-settings>=2.0.0",
    "sounddevice>=0.4.6",
    "scipy>=1.10.0",
    "librosa>=0.10.0",
    "noisereduce>=3.0.0",
    "numpy>=1.24.0,<2.0.0",
    "transformers>=4.42.0,<4.47.0",  # Pin to avoid BeamSearchScorer import error
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",
    "ruff>=0.1.0",
]

[project.scripts]
clone-voice = "clone_voice.cli:app"

[tool.hatch.build.targets.wheel]
packages = ["src/clone_voice"]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP"]
ignore = ["E501"]

[tool.pytest.ini_options]
testpaths = ["tests"]
